test/parser/should_fail/indentation2.souc.bad
main() = do
    if "ok"
    print "this is bad"
    end if
end main
